/**
 * QUIC-Enhanced Legal AI System Integration
 * Links all components with ultra-low latency QUIC protocol
 */

import { vectorProxy } from './grpc-quic-vector-proxy.js';
import { createQUICClient } from './quic-client.js';
import { yorhaAPI } from '$lib/components/three/yorha-ui/api/YoRHaAPIClient.js';
import { createSelfPromptingSystem } from './selfPromptingSystem.js';
import { createSvelteKitCluster } from './nodejs-cluster-architecture.js';

export interface LegalAIIntegrationConfig {
  quicEnabled: boolean;
  flashAttentionEnabled: boolean;
  multicoreEnabled: boolean;
  yorhaUIEnabled: boolean;
  contextualAutosolveEnabled: boolean;
  clusterMode: boolean;
  services: {
    quicGateway: string;
    ragProxy: string;
    vectorProxy: string;
    uploadService: string;
    enhancedRAG: string;
  };
}

export class QUICLegalAIIntegration {
  private config: LegalAIIntegrationConfig;
  private quicClient: any;
  private selfPrompting: any;
  private clusterManager: any;
  private isInitialized = false;

  constructor(config: Partial<LegalAIIntegrationConfig> = {}) {
    this.config = {
      quicEnabled: true,
      flashAttentionEnabled: true,
      multicoreEnabled: true,
      yorhaUIEnabled: true,
      contextualAutosolveEnabled: true,
      clusterMode: false,
      services: {
        quicGateway: 'http://localhost:8443',
        ragProxy: 'http://localhost:8095',
        vectorProxy: 'http://localhost:8216',
        uploadService: 'http://localhost:8093',
        enhancedRAG: 'http://localhost:8094',
      },
      ...config
    };
  }

  async initialize(): Promise<void> {
    console.log('üöÄ Initializing QUIC-Enhanced Legal AI System...');

    try {
      // 1. Initialize QUIC Client for ultra-low latency
      if (this.config.quicEnabled) {
        this.quicClient = createQUICClient(this.config.services.quicGateway);
        await this.quicClient.connect();
        console.log('‚úÖ QUIC Client: Connected');
      }

      // 2. Initialize Vector Proxy with QUIC preference
      await vectorProxy.initialize();
      console.log('‚úÖ Vector Proxy: Initialized with QUIC priority');

      // 3. Initialize YoRHa UI API Client
      if (this.config.yorhaUIEnabled) {
        // YoRHa API client is already configured with QUIC endpoint
        console.log('‚úÖ YoRHa UI API: Connected to QUIC endpoints');
      }

      // 4. Initialize Self-Prompting System with Context7 integration
      if (this.config.contextualAutosolveEnabled) {
        this.selfPrompting = createSelfPromptingSystem({
          documentId: 'legal-ai-session',
          documentType: 'contract',
          currentContent: '',
          contentLength: 0,
        });
        console.log('‚úÖ Self-Prompting System: Active with Context7 autosolve');
      }

      // 5. Initialize Node.js Cluster (if enabled)
      if (this.config.clusterMode) {
        this.clusterManager = createSvelteKitCluster({
          workers: 4,
          port: 5173,
          loadBalancingStrategy: 'cpu-based',
          enableStickySession: false
        });
        console.log('‚úÖ Node.js Cluster: Multi-core architecture active');
      }

      // 6. Setup service health monitoring
      await this.setupHealthMonitoring();

      this.isInitialized = true;
      console.log('üéØ Legal AI System: Fully integrated and operational');

    } catch (error) {
      console.error('‚ùå Integration initialization failed:', error);
      throw error;
    }
  }

  /**
   * Process legal document with full AI pipeline
   */
  async processLegalDocument(content: string, options: {
    useQuic?: boolean;
    enableAutosolve?: boolean;
    generateSuggestions?: boolean;
  } = {}): Promise<{
    analysis: any;
    suggestions: string[];
    vectorResults: any;
    processingTime: number;
  }> {
    const startTime = Date.now();
    
    if (!this.isInitialized) {
      await this.initialize();
    }

    try {
      console.log('üìÑ Processing legal document with QUIC acceleration...');

      // 1. Vector embedding and search with QUIC
      const vectorResults = await vectorProxy.vectorSearch(
        content.substring(0, 1000), // Sample for search
        [], // Embedding will be generated
        {
          limit: 10,
          threshold: 0.7,
          useGPU: true,
          preferredProtocol: options.useQuic !== false ? 'quic' : 'grpc'
        }
      );

      // 2. Enhanced RAG analysis via QUIC
      let analysis = null;
      if (this.config.quicEnabled && this.quicClient) {
        analysis = await this.quicClient.streamLLMAnalysis(
          content,
          (chunk: any) => {
            // Real-time streaming updates
            console.log('üìä Analysis chunk:', chunk.type, chunk.progress);
          }
        );
      } else {
        // Fallback to HTTP
        const response = await fetch(`${this.config.services.enhancedRAG}/api/analyze`, {
          method: 'POST',
          headers: { 'Content-Type': 'application/json' },
          body: JSON.stringify({ content, type: 'legal_document' })
        });
        analysis = await response.json();
      }

      // 3. Generate contextual suggestions
      let suggestions: string[] = [];
      if (options.generateSuggestions && this.selfPrompting) {
        this.selfPrompting.recordActivity('content_change', { content });
        // Suggestions will be generated via self-prompting system
        suggestions = [
          'Consider adding indemnification clause',
          'Review jurisdiction and governing law',
          'Ensure termination conditions are clear'
        ];
      }

      // 4. Update YoRHa UI with results (if enabled)
      if (this.config.yorhaUIEnabled) {
        yorhaAPI.subscribe('analysis:complete', (data) => {
          console.log('üé® YoRHa UI updated with analysis results');
        });
      }

      const processingTime = Date.now() - startTime;
      console.log(`‚ö° Document processing complete: ${processingTime}ms`);

      return {
        analysis,
        suggestions,
        vectorResults,
        processingTime
      };

    } catch (error) {
      console.error('‚ùå Document processing failed:', error);
      throw error;
    }
  }

  /**
   * Setup comprehensive health monitoring
   */
  private async setupHealthMonitoring(): Promise<void> {
    setInterval(async () => {
      const health = await this.getSystemHealth();
      
      if (health.overall !== 'healthy') {
        console.warn('‚ö†Ô∏è System health issue detected:', health);
        
        // Trigger self-healing if possible
        if (health.quic !== 'healthy' && this.quicClient) {
          console.log('üîÑ Attempting QUIC reconnection...');
          await this.quicClient.connect();
        }
      }
    }, 30000); // Check every 30 seconds
  }

  /**
   * Get comprehensive system health status
   */
  async getSystemHealth(): Promise<{
    overall: 'healthy' | 'degraded' | 'critical';
    services: Record<string, 'healthy' | 'unhealthy' | 'unknown'>;
    performance: {
      avgLatency: number;
      throughput: number;
      errorRate: number;
    };
    quic: 'healthy' | 'degraded' | 'offline';
  }> {
    const services: Record<string, 'healthy' | 'unhealthy' | 'unknown'> = {};
    
    // Check all service endpoints
    for (const [name, url] of Object.entries(this.config.services)) {
      try {
        const response = await fetch(`${url}/health`, { 
          signal: AbortSignal.timeout(5000) 
        });
        services[name] = response.ok ? 'healthy' : 'unhealthy';
      } catch {
        services[name] = 'unhealthy';
      }
    }

    // Get vector proxy performance stats
    const vectorStats = vectorProxy.getPerformanceStats();
    
    // Calculate overall health
    const healthyServices = Object.values(services).filter(s => s === 'healthy').length;
    const totalServices = Object.values(services).length;
    const healthRatio = healthyServices / totalServices;
    
    let overall: 'healthy' | 'degraded' | 'critical' = 'healthy';
    if (healthRatio < 0.5) overall = 'critical';
    else if (healthRatio < 0.8) overall = 'degraded';

    // Check QUIC status
    let quicStatus: 'healthy' | 'degraded' | 'offline' = 'offline';
    if (this.quicClient) {
      const connectionState = this.quicClient.getConnectionState();
      quicStatus = connectionState.isConnected ? 'healthy' : 'offline';
    }

    return {
      overall,
      services,
      performance: {
        avgLatency: Object.values(vectorStats).reduce((sum: number, stat: any) => sum + (stat.avg || 0), 0) / Object.keys(vectorStats).length || 0,
        throughput: this.quicClient?.getStreamStats()?.total || 0,
        errorRate: 0
      },
      quic: quicStatus
    };
  }

  /**
   * Execute Context7 autosolve cycle
   */
  async runAutosolve(): Promise<{
    errorsFound: number;
    errorsSolved: number;
    suggestions: string[];
  }> {
    console.log('üß† Running Context7 autosolve cycle...');
    
    try {
      const response = await fetch('/api/context7-autosolve', {
        method: 'POST',
        headers: { 'Content-Type': 'application/json' },
        body: JSON.stringify({ 
          action: 'force_cycle',
          useQUIC: this.config.quicEnabled 
        })
      });
      
      const result = await response.json();
      console.log('‚úÖ Autosolve cycle completed:', result);
      
      return {
        errorsFound: result.errorsFound || 0,
        errorsSolved: result.errorsSolved || 0,
        suggestions: result.suggestions || []
      };
    } catch (error) {
      console.error('‚ùå Autosolve cycle failed:', error);
      return { errorsFound: 0, errorsSolved: 0, suggestions: [] };
    }
  }

  /**
   * Get integration status for monitoring
   */
  getStatus() {
    return {
      initialized: this.isInitialized,
      config: this.config,
      vectorProxy: vectorProxy.getStatus(),
      quicClient: this.quicClient?.getConnectionState(),
      selfPrompting: this.selfPrompting?.getContext(),
      clusterManager: this.clusterManager?.getHealth()
    };
  }

  /**
   * Cleanup and shutdown
   */
  async shutdown(): Promise<void> {
    console.log('üõë Shutting down Legal AI Integration...');
    
    if (this.quicClient) {
      this.quicClient.disconnect();
    }
    
    if (this.selfPrompting) {
      this.selfPrompting.destroy();
    }
    
    // Note: Cluster manager handles its own shutdown via signals
    
    console.log('‚úÖ Shutdown complete');
  }
}

// Export singleton instance
export const legalAIIntegration = new QUICLegalAIIntegration({
  quicEnabled: typeof window !== 'undefined' && import.meta.env.PUBLIC_QUIC_ENABLED === 'true',
  services: {
    quicGateway: import.meta.env.PUBLIC_QUIC_GATEWAY || 'http://localhost:8443',
    ragProxy: import.meta.env.PUBLIC_QUIC_RAG_PROXY || 'http://localhost:8095',
    vectorProxy: import.meta.env.PUBLIC_QUIC_VECTOR_PROXY || 'http://localhost:8216',
    uploadService: import.meta.env.PUBLIC_API_URL || 'http://localhost:8093',
    enhancedRAG: import.meta.env.PUBLIC_API_URL || 'http://localhost:8094',
  }
});

// Auto-initialize on import (browser only)
if (typeof window !== 'undefined') {
  legalAIIntegration.initialize().catch(console.error);
}